Update PostItemPinned.css : Fix Title Overflow Error

--- a/src/layout/PostItemPinned.css
+++ b/src/layout/PostItemPinned.css
@@ -39,6 +39,9 @@
 #postPinnedInfoTitle p{
     color: #164EAB;
     font-size: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #postPinnedThumbnail{
